popover alignment issue fixed

--- a/public/StandardExtensions/extensionloader.css
+++ b/public/StandardExtensions/extensionloader.css
@@ -14,8 +14,8 @@
     bottom: 100%;
     font-size: 16px;
     display: block;
-    left: -112px;
-    width: 240px;
+    left: -169px;
+    width: 256px;
     margin-bottom: 15px;
     opacity: 0;
     padding: 9px 14px;
